{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 107,
  "lineage": "e830829d-c061-0337-0f5a-7776a8e4e57f",
  "resources": [
    {
      "module": "module.maquinas",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:005948301962:instance/i-080b5a097f2eda52d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080b5a097f2eda52d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key-Private-API-01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066aa6ce7a9a9a19b",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e2ac9c10d5d0ff20",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c588aab503c3e19",
            "tags": {
              "Name": "private-instance-API"
            },
            "tags_all": {
              "Name": "private-instance-API"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd0c6bb9b3718200"
            ]
          },
          "dependencies": [
            "module.maquinas.aws_instance.private_instance_db",
            "module.maquinas.aws_instance.public_instance_web_server",
            "module.rede.aws_eip.nat",
            "module.rede.aws_internet_gateway.gw",
            "module.rede.aws_nat_gateway.nat",
            "module.rede.aws_route_table.private",
            "module.rede.aws_route_table.public",
            "module.rede.aws_route_table_association.private_assoc",
            "module.rede.aws_route_table_association.public_assoc",
            "module.rede.aws_security_group.private_sg_api",
            "module.rede.aws_security_group.private_sg_db",
            "module.rede.aws_security_group.public_sg",
            "module.rede.aws_subnet.private",
            "module.rede.aws_subnet.public",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.maquinas",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:005948301962:instance/i-00df9bb3329396a6d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00df9bb3329396a6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key-Private-DB-01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dceee8ae404e9f46",
            "private_dns": "ip-10-0-1-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0880167886c9584bd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c588aab503c3e19",
            "tags": {
              "Name": "private-instance-DB"
            },
            "tags_all": {
              "Name": "private-instance-DB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0727d0c4d4764b70b"
            ]
          },
          "dependencies": [
            "module.maquinas.aws_instance.public_instance_web_server",
            "module.rede.aws_eip.nat",
            "module.rede.aws_internet_gateway.gw",
            "module.rede.aws_nat_gateway.nat",
            "module.rede.aws_route_table.private",
            "module.rede.aws_route_table.public",
            "module.rede.aws_route_table_association.private_assoc",
            "module.rede.aws_route_table_association.public_assoc",
            "module.rede.aws_security_group.private_sg_api",
            "module.rede.aws_security_group.private_sg_db",
            "module.rede.aws_security_group.public_sg",
            "module.rede.aws_subnet.private",
            "module.rede.aws_subnet.public",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.maquinas",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:005948301962:instance/i-0694ccdcc3c723e86",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0694ccdcc3c723e86",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key-Public-Front-01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c2325f3eef8709c",
            "private_dns": "ip-10-0-0-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.90",
            "public_ip": "52.90.153.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a02900a19e35233c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a71f4ffc9e90ac79",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098948eb2f792b6c6"
            ]
          },
          "dependencies": [
            "module.rede.aws_eip.nat",
            "module.rede.aws_internet_gateway.gw",
            "module.rede.aws_nat_gateway.nat",
            "module.rede.aws_route_table.private",
            "module.rede.aws_route_table.public",
            "module.rede.aws_route_table_association.private_assoc",
            "module.rede.aws_route_table_association.public_assoc",
            "module.rede.aws_security_group.private_sg_api",
            "module.rede.aws_security_group.private_sg_db",
            "module.rede.aws_security_group.public_sg",
            "module.rede.aws_subnet.private",
            "module.rede.aws_subnet.public",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2476e6fe301fe66",
            "arn": "arn:aws:ec2:us-east-1:005948301962:elastic-ip/eipalloc-0e2476e6fe301fe66",
            "domain": "vpc",
            "id": "eipalloc-0e2476e6fe301fe66",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-13-219-213-13.compute-1.amazonaws.com",
            "public_ip": "13.219.213.13",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005948301962:internet-gateway/igw-0d93884de0857f981",
            "id": "igw-0d93884de0857f981",
            "owner_id": "005948301962",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0dfaea010c2a2af4e"
          },
          "dependencies": [
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2476e6fe301fe66",
            "association_id": "eipassoc-07f9040836956b4b9",
            "connectivity_type": "public",
            "id": "nat-01d92dad4b51f0bc0",
            "network_interface_id": "eni-042ee32352700eebc",
            "private_ip": "10.0.0.53",
            "public_ip": "13.219.213.13",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a71f4ffc9e90ac79",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.rede.aws_eip.nat",
            "module.rede.aws_subnet.public",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005948301962:route-table/rtb-03bf27af11b266607",
            "id": "rtb-03bf27af11b266607",
            "owner_id": "005948301962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d92dad4b51f0bc0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/23",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfaea010c2a2af4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rede.aws_eip.nat",
            "module.rede.aws_nat_gateway.nat",
            "module.rede.aws_subnet.public",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005948301962:route-table/rtb-062579e92c1db1ccc",
            "id": "rtb-062579e92c1db1ccc",
            "owner_id": "005948301962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d93884de0857f981",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/23",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfaea010c2a2af4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rede.aws_internet_gateway.gw",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd632268ca8dd77e",
            "route_table_id": "rtb-03bf27af11b266607",
            "subnet_id": "subnet-02c588aab503c3e19"
          },
          "dependencies": [
            "module.rede.aws_eip.nat",
            "module.rede.aws_nat_gateway.nat",
            "module.rede.aws_route_table.private",
            "module.rede.aws_subnet.private",
            "module.rede.aws_subnet.public",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ae3c96931ea7afe",
            "route_table_id": "rtb-062579e92c1db1ccc",
            "subnet_id": "subnet-0a71f4ffc9e90ac79"
          },
          "dependencies": [
            "module.rede.aws_internet_gateway.gw",
            "module.rede.aws_route_table.public",
            "module.rede.aws_subnet.public",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005948301962:security-group/sg-0cd0c6bb9b3718200",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd0c6bb9b3718200",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098948eb2f792b6c6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098948eb2f792b6c6"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20250410203942052200000003",
            "name_prefix": "terraform-",
            "owner_id": "005948301962",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg-api"
            },
            "tags_all": {
              "Name": "private-sg-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfaea010c2a2af4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rede.aws_security_group.public_sg",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005948301962:security-group/sg-0727d0c4d4764b70b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0727d0c4d4764b70b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098948eb2f792b6c6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd0c6bb9b3718200"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250410203946645500000004",
            "name_prefix": "terraform-",
            "owner_id": "005948301962",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg-db"
            },
            "tags_all": {
              "Name": "private-sg-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfaea010c2a2af4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rede.aws_security_group.private_sg_api",
            "module.rede.aws_security_group.public_sg",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005948301962:security-group/sg-098948eb2f792b6c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098948eb2f792b6c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250410203937126900000001",
            "name_prefix": "terraform-",
            "owner_id": "005948301962",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg"
            },
            "tags_all": {
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfaea010c2a2af4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005948301962:subnet/subnet-02c588aab503c3e19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c588aab503c3e19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005948301962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0dfaea010c2a2af4e"
          },
          "dependencies": [
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005948301962:subnet/subnet-0a71f4ffc9e90ac79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a71f4ffc9e90ac79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005948301962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0dfaea010c2a2af4e"
          },
          "dependencies": [
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rede",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005948301962:vpc/vpc-0dfaea010c2a2af4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-05862c905ccf48f1c",
            "default_route_table_id": "rtb-03668b346b6720d53",
            "default_security_group_id": "sg-0afa5fbc90b483bbf",
            "dhcp_options_id": "dopt-0d64943398465d934",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dfaea010c2a2af4e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03668b346b6720d53",
            "owner_id": "005948301962",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.s3",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005948301962:vpc-endpoint/vpce-01e9a6f76aace1d89",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-01e9a6f76aace1d89",
            "owner_id": "005948301962",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03bf27af11b266607"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-vpc-endpoint"
            },
            "tags_all": {
              "Name": "s3-vpc-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0dfaea010c2a2af4e"
          },
          "dependencies": [
            "module.rede.aws_eip.nat",
            "module.rede.aws_internet_gateway.gw",
            "module.rede.aws_nat_gateway.nat",
            "module.rede.aws_route_table.private",
            "module.rede.aws_route_table.public",
            "module.rede.aws_route_table_association.private_assoc",
            "module.rede.aws_route_table_association.public_assoc",
            "module.rede.aws_security_group.private_sg_api",
            "module.rede.aws_security_group.private_sg_db",
            "module.rede.aws_security_group.public_sg",
            "module.rede.aws_subnet.private",
            "module.rede.aws_subnet.public",
            "module.rede.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}